New PathAnimationEffect API

--- a/test/testcases/test-path.html
+++ b/test/testcases/test-path.html
@@ -68,13 +68,14 @@ height: 500px;
 "use strict";
 
 var animFunc = new PathAnimationEffect(
-    document.querySelector('#path1'));
+    document.querySelector('#path1').pathSegList, 'auto-rotate');
 animFunc.rotate = true;
 
 document.timeline.play(new Animation(document.querySelector("#anim1"),
     animFunc, {iterationDuration: 2, iterationCount: 2}));
 
-var animFunc2 = new PathAnimationEffect(document.querySelector('#path2'));
+var animFunc2 = new PathAnimationEffect(
+    document.querySelector('#path2').pathSegList, 'auto-rotate');
 animFunc2.rotate = true;
 
 document.timeline.play(new Animation(document.querySelector("#anim2"),
