Revert testscases.js back to js

--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -72,12 +72,7 @@ tbody.no-tests {
 
 
 </style>
-<script>
-'use strict';
-var tests = [];
-function testCases(new_tests) { tests = new_tests; };
-</script>
-<script src="testcases.jsonp?jsonp=testCases"></script>
+<script src="testcases.js"></script>
 
 <div id=status-box>
 <h1 id=status>Pending</h1>
