Mainly automatic transform of test_at to the timing_test(function() { at() }) API.

--- a/test/testcases/test-bounds.html
+++ b/test/testcases/test-bounds.html
@@ -35,37 +35,36 @@ var animFunc = {left: ["100px", "200px"]};
 // Test that the animation interval uses inclusive start and end bounds.
 var elem1 = document.getElementById("anim1");
 var player1 =
-    document.timeline.play(new Animation(elem1, animFunc, 1.0));
+  document.timeline.play(new Animation(elem1, animFunc, 1.0));
 
-test_at(
-    0,
-    function() { assert_equals(getComputedStyle(elem1).left, "100px") },
-    "Start bound should be inclusive");
+timing_test(function() {
+    at(0, function() { assert_equals(getComputedStyle(elem1).left, "100px") });
+  },
+  "Start bound should be inclusive");
 
-test_at(
-    1.0,
-    function() { assert_equals(getComputedStyle(elem1).left, "200px") },
-    "End bound should be inclusive");
+timing_test(function() {
+    at(1.0, function() { assert_equals(getComputedStyle(elem1).left, "200px") });
+  },
+  "End bound should be inclusive");
 
 // Test that startDelay is applied correctly.
 var elem2 = document.getElementById("anim2");
 var player2 = document.timeline.play(
-    new Animation(elem2, animFunc, {iterationDuration: 1.0, startDelay: 1.0}));
+  new Animation(elem2, animFunc, {iterationDuration: 1.0, startDelay: 1.0}));
 
-test_at(
-    0,
-    function() { assert_equals(getComputedStyle(elem2).left, "0px"); },
-    "Start bound should include startDelay");
+timing_test(function() {
+    at(0, function() { assert_equals(getComputedStyle(elem2).left, "0px"); });
+  },
+  "Start bound should include startDelay");
 
-test_at(
-    1.0,
-    function() { assert_equals(getComputedStyle(elem2).left, "100px"); },
-    "Start bound with startDelay should be inclusive");
+timing_test(function() {
+    at(1.0, function() { assert_equals(getComputedStyle(elem2).left, "100px"); });
+  },
+  "Start bound with startDelay should be inclusive");
 
-test_at(
-    2.0,
-    function() { assert_equals(getComputedStyle(elem2).left, "200px"); },
-    "End bound with startDelay should be inclusive");
-
+timing_test(function() {
+    at(2.0, function() { assert_equals(getComputedStyle(elem2).left, "200px"); });
+  },
+  "End bound with startDelay should be inclusive");
 
 </script>
