--- a/test/testcases/test-player.html
+++ b/test/testcases/test-player.html
@@ -117,16 +117,18 @@ var player5 = dt.play(animation);
 player5.currentTime = 42;
 test(function() {assert_equals(player5.currentTime,  0)},
      "player5's currentTime should always be zero before Timeline starts");
-test_at(0.1, function() {assert_true(player5.currentTime > 42)},
-        "player5's updates to currentTime should take effect after Timeline starts");
+timing_test(function() {
+    at(0.1, function() {assert_true(player5.currentTime > 42)});
+  }, "player5's updates to currentTime should take effect after Timeline starts");
 
 // Test that setting startTime has no effect until the timeline starts.
 var player6 = dt.play(animation);
 player6.startTime = 42;
 test(function() {assert_equals(player6.currentTime,  0)},
      "player6's currentTime should always be zero before Timeline starts");
-test_at(0.1, function() {assert_true(player6.currentTime < -41)},
-        "player6's updates to startTime should take effect after Timeline starts");
+timing_test(function() {
+    at(0.1, function() {assert_true(player6.currentTime < -41)});
+  }, "player6's updates to startTime should take effect after Timeline starts");
 
 // Test that a Player's TimedItem gets a null inherited time until the
 // timeline starts.
@@ -135,9 +137,10 @@ dt.play(animation1);
 test(function() {assert_equals(animation1.localTime, null)},
      "TimedItem's inherited time, and thus " +
      "localTime should be null before Timeline starts");
-test_at(0.0, function() {assert_not_equals(animation1.localTime, null)},
-        "TimedItem's inherited time " +
-        "and thus localTime should not be null after Timeline starts");
+timing_test(function() {
+    at(0.0, function() {assert_not_equals(animation1.localTime, null)});
+  }, "TimedItem's inherited time " +
+     "and thus localTime should not be null after Timeline starts");
 
 // Test that TimedItem is updated immediately on calling Timeline.play() after
 // the timeline starts.
@@ -145,39 +148,43 @@ var animation4 = new Animation(
    document.getElementById("anim"), {left: "100px"});
 test(function() {assert_equals(animation4.localTime,  null)},
      "localTime should be null before playing");
-test_at(0.0, function() {
-    document.timeline.play(animation4);
-    assert_equals(animation4.localTime,  0)
-  },
-  "localTime should be set by playing");
+timing_test(function() {
+    at(0.0, function() {
+      document.timeline.play(animation4);
+      assert_equals(animation4.localTime,  0)
+    });
+  }, "localTime should be set by playing");
 
 // Test that updates to currentTime take immediate effect.
-test_at(0.0, function() {
-    var animation5 = new Animation(
-      document.getElementById("anim"), {left: "100px"});
-    document.timeline.play(animation5).currentTime = 42;
-    assert_equals(animation5.localTime,  42);
-  },
-  "Updates to Player.currentTime should take immediate effect");
+timing_test(function() {
+    at(0.0, function() {
+      var animation5 = new Animation(
+        document.getElementById("anim"), {left: "100px"});
+      document.timeline.play(animation5).currentTime = 42;
+      assert_equals(animation5.localTime,  42);
+    });
+  }, "Updates to Player.currentTime should take immediate effect");
 
 // Test that updates to startTime take immediate effect.
-test_at(0.0, function() {
-    var animation6 = new Animation(
-      document.getElementById("anim"), {left: "100px"});
-    document.timeline.play(animation6).startTime = 42;
-    assert_equals(animation6.localTime < -41,  true);
-  },
-  "Updates to Player.startTime should take immediate effect");
+timing_test(function() {
+    at(0.0, function() {
+      var animation6 = new Animation(
+        document.getElementById("anim"), {left: "100px"});
+      document.timeline.play(animation6).startTime = 42;
+      assert_equals(animation6.localTime < -41,  true);
+    });
+  }, "Updates to Player.startTime should take immediate effect");
 
 // Test that updates to source take immediate effect.
-test_at(0.0, function() {
-    var player = document.timeline.play(new Animation(
-      document.getElementById("anim"), {left: "100px"}));
-    var animation7 = new Animation(
-      document.getElementById("anim"), {left: "100px"});
-    player.source = animation7;
-    assert_equals(animation7.localTime,  0);
-  },
-  "Updates to Player.source should take immediate effect");
+timing_test(function() {
+    at(0.0, function() {
+      var player = document.timeline.play(new Animation(
+        document.getElementById("anim"), {left: "100px"}));
+      var animation7 = new Animation(
+        document.getElementById("anim"), {left: "100px"});
+      player.source = animation7;
+      assert_equals(animation7.localTime,  0);
+    });
+  }, "Updates to Player.source should take immediate effect");
 
 </script>
