--- a/test/testcases/test-restart.html
+++ b/test/testcases/test-restart.html
@@ -43,57 +43,66 @@ var anim3 = new Animation(document.getElementById("anim3"), animFunc, 1.0);
 var player3 = document.timeline.play(anim3);
 
 // Check that once an animation is completed, creating a new Player restarts it.
-test_at(1.0, function() {
-    assert_styles('#anim1', {'left': '100px'});
-    document.timeline.play(anim1);
-  },
-  "Animation 1 should be in end state");
+timing_test(function() {
+    at(1.0, function() {
+      assert_styles('#anim1', {'left': '100px'});
+      document.timeline.play(anim1);
+    });
+  }, "Animation 1 should be in end state");
 
-test_at(1.5, function() {assert_styles('#anim1', {'left': '50px'})},
-  "Animation 1 should have been restarted");
+timing_test(function() {
+    at(1.5, function() {assert_styles('#anim1', {'left': '50px'})});
+  }, "Animation 1 should have been restarted");
 
-test_at(2.0, function() {assert_styles('#anim1', {'left': '100px'})},
-  "Animation 1 should be in end state a second time");
+timing_test(function() {
+    at(2.0, function() {assert_styles('#anim1', {'left': '100px'})});
+  }, "Animation 1 should be in end state a second time");
 
 // Setting Player.currentTime = 0 restarts it.
-test_at(0.5, function() {
-    assert_styles("#anim2", {'left': '50px'});
-    player2.currentTime = 0.0;
-  },
-  "Animation 2 should be in the middle of running");
+timing_test(function() {
+    at(0.5, function() {
+      assert_styles("#anim2", {'left': '50px'});
+      player2.currentTime = 0.0;
+    });
+  }, "Animation 2 should be in the middle of running");
 
-test_at(0.75, function() {
-    assert_styles('#anim2', {'left': '25px'});
-  },
-  "Animation 2 should have been restarted");
+timing_test(function() {
+    at(0.75, function() {
+      assert_styles('#anim2', {'left': '25px'});
+    });
+  }, "Animation 2 should have been restarted");
 
-test_at(1.0, function() {
-    assert_styles('#anim2', {'left': '50px'});
-  },
-  "Animation 2 should have been restarted, 2");
+timing_test(function() {
+    at(1.0, function() {
+      assert_styles('#anim2', {'left': '50px'});
+    });
+  }, "Animation 2 should have been restarted, 2");
 
-test_at(1.5, function() {
-    assert_styles('#anim2', {'left': '100px'});
-  },
-  "Animation 2 should be in end state a second time");
+timing_test(function() {
+    at(1.5, function() {
+      assert_styles('#anim2', {'left': '100px'});
+    });
+  }, "Animation 2 should be in end state a second time");
 
 // Even when animation is completed, setting Player.currentTime = 0 restarts
 // it.
-test_at(1.0, function() {
-    assert_styles("#anim3", {'left': '100px'});
-    player3.currentTime = 0.0;
-  },
-  "Animation 3 should be in end state");
+timing_test(function() {
+    at(1.0, function() {
+      assert_styles("#anim3", {'left': '100px'});
+      player3.currentTime = 0.0;
+    });
+  }, "Animation 3 should be in end state");
 
-test_at(1.5, function() {
-    assert_styles('#anim3', {'left': '50px'});
-  },
-  "Animation 3 should have been restarted");
+timing_test(function() {
+    at(1.5, function() {
+      assert_styles('#anim3', {'left': '50px'});
+    });
+  }, "Animation 3 should have been restarted");
 
-test_at(2.0, function() {
-    assert_styles('#anim3', {'left': '100px'});
-  },
-  "Animation 3 should be in end state a second time");
+timing_test(function() {    at(2.0, function() {
+      assert_styles('#anim3', {'left': '100px'});
+    });
+  }, "Animation 3 should be in end state a second time");
 
 
 // Check that TimedItem.localTime is read-only.
@@ -102,7 +111,6 @@ document.timeline.play(anim4);
 test(function() {
     assert_throws(new TypeError(), function() {anim4.localTime = 0;});
     assert_equals(anim4.localTime,  null);
-  },
-  "TimedItem.localTime should be read-only");
+  }, "TimedItem.localTime should be read-only");
 
 </script>
