--- a/test/testcases/test-update-state.html
+++ b/test/testcases/test-update-state.html
@@ -41,7 +41,7 @@ test_at(1, function() {
 }, 'Updated style should be visible after change to specified timing');
 
 var group = new SeqGroup([
-  new Animation(element, {bottom: ['0px', '100px']}, 1),
+  new Animation(element, {foo: []}, 1),
   new Animation(element, {right: ['0px', '1000px']}, 10),
 ]);
 document.timeline.play(group);
@@ -55,4 +55,19 @@ test_at(2, function() {
   assert_styles(element, {right: '200px'});
 
 }, 'Updated style should be visible after change to animation tree');
+
+var anim3 = element.animate({bottom: ['0px', '1000px']}, 10);
+// Run this last, since if it fails it's likely to corrupt the other tests.
+test_at(5, function() {
+  assert_styles(element, {bottom: '500px'});
+
+  try {
+    var group = new ParGroup();
+    group.append(group);
+  } catch (e) {
+  }
+  anim3.specified.startDelay = -1;
+  assert_styles(element, {bottom: '600px'});
+
+}, 'Updated style should be visible despite unrelated errors');
 </script>
