Update reference to bootstrap.js in testcases

--- a/test/testcases/test-bounds.html
+++ b/test/testcases/test-bounds.html
@@ -25,7 +25,7 @@ div.anim {
 <div id="anim1" class="anim"></div>
 <div id="anim2" class="anim"></div>
 
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
