--- a/test/testcases/test-fill-values.html
+++ b/test/testcases/test-fill-values.html
@@ -101,7 +101,7 @@ limitations under the License.
 
 <div style="height: 1000px;"></div>
 
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
