--- a/test/testcases/test-non-numeric.html
+++ b/test/testcases/test-non-numeric.html
@@ -27,7 +27,7 @@ body {
 <div id="parent" style='background:lightsteelblue'>
   <div style='background:red' id='test'></div>
 </div>
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
