--- a/test/testcases/test-rectangle.html
+++ b/test/testcases/test-rectangle.html
@@ -33,7 +33,7 @@ position: absolute;
 <div id="expectation"></div>
 <div id="test"></div>
 <div style="height: 650px"></div>
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
