--- a/test/testcases/test-text-shadow.html
+++ b/test/testcases/test-text-shadow.html
@@ -16,7 +16,7 @@ limitations under the License.
 
 <!DOCTYPE html>
 <body>The shadows should slide back under the text.
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
