--- a/test/testcases/unit-test-set-parent.html
+++ b/test/testcases/unit-test-set-parent.html
@@ -18,7 +18,7 @@ limitations under the License.
 <div id="anim"></div>
 
 <script src="../../web-animations.js"></script>
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script>
 "use strict";
 
