--- a/test/testcases/manual-test-preset-timings.html
+++ b/test/testcases/manual-test-preset-timings.html
@@ -27,7 +27,7 @@ span {
 </style>
 <body>
 
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
