--- a/test/testcases/test-compositor.html
+++ b/test/testcases/test-compositor.html
@@ -32,7 +32,7 @@ limitations under the License.
   <rect class="anim" x="100px" y="10px" width="100px" height="100px"></rect>
   <rect class="anim2" x="100px" y="10px" width="100px" height="100px"></rect>
 </svg>
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
