--- a/test/testcases/test-element-animate.html
+++ b/test/testcases/test-element-animate.html
@@ -23,7 +23,7 @@ body {
 </style>
 <body>
 PASS
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
