--- a/test/testcases/test-font-weight.html
+++ b/test/testcases/test-font-weight.html
@@ -34,7 +34,7 @@ limitations under the License.
 <body>
 <div class='test target' style='font-weight: 900;'>Testing font-weight!</div>
 <div class='test' style='font-weight: 100' id='test'>Testing font-weight!</div>
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
