--- a/test/testcases/test-getcurrent.html
+++ b/test/testcases/test-getcurrent.html
@@ -35,7 +35,7 @@
 <div id="a" class="ball">A</div>
 <div id="b" class="ball">B</div>
 
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
