--- a/test/testcases/test-iterations-alternate-holes.html
+++ b/test/testcases/test-iterations-alternate-holes.html
@@ -27,7 +27,7 @@ limitations under the License.
 
 <div id="a" class="anim"></div>
 
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
