--- a/test/testcases/test-keyframe-creation.html
+++ b/test/testcases/test-keyframe-creation.html
@@ -77,7 +77,7 @@ limitations under the License.
 
 <div style="height: 750px"></div>
 
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
