--- a/test/testcases/test-playback-rate.html
+++ b/test/testcases/test-playback-rate.html
@@ -87,7 +87,7 @@ limitations under the License.
 
 <div style="height: 450px"></div>
 
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
