--- a/test/testcases/test-player.html
+++ b/test/testcases/test-player.html
@@ -19,7 +19,7 @@ Written by Steph McArthur
 <!DOCTYPE html>
 <div id="anim"></div>
 
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 
