--- a/test/testcases/test-reparent.html
+++ b/test/testcases/test-reparent.html
@@ -36,7 +36,7 @@ limitations under the License.
   <div id="a" class="anim"></div>
 </div>
 
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
