--- a/test/testcases/test-start-time.html
+++ b/test/testcases/test-start-time.html
@@ -64,7 +64,7 @@ limitations under the License.
 
 <div style="height:200px;"></div>
 
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
