--- a/test/testcases/test-timing-functions.html
+++ b/test/testcases/test-timing-functions.html
@@ -50,7 +50,7 @@ body { margin: 0px; }
 
 <div style="height:50px"></div>
 
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
