--- a/test/testcases/test-transform-3d.html
+++ b/test/testcases/test-transform-3d.html
@@ -49,7 +49,7 @@ limitations under the License.
 </style>
 <div class="container"></div>
 <div style="height: 700px"></div>
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
