--- a/test/testcases/test-visibility.html
+++ b/test/testcases/test-visibility.html
@@ -58,7 +58,7 @@ for (var start in states) {
 }
 
 </script>
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
