--- a/test/testcases/unit-test-modify-timing-params.html
+++ b/test/testcases/unit-test-modify-timing-params.html
@@ -17,7 +17,7 @@ limitations under the License.
 <!DOCTYPE html>
 <div id="anim"></div>
 
-<script src="../testharness_bootstrap.js"></script>
+<script src="../bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
 "use strict";
