Specify nochecks flag for tests with no -checks.js file

--- a/test/testcases/test-bounds.html
+++ b/test/testcases/test-bounds.html
@@ -25,7 +25,7 @@ div.anim {
 <div id="anim1" class="anim"></div>
 <div id="anim2" class="anim"></div>
 
-<script src="../bootstrap.js"></script>
+<script src="../bootstrap.js" nochecks></script>
 <script>
 "use strict";
 
