--- a/test/testcases/test-compositing-order.html
+++ b/test/testcases/test-compositing-order.html
@@ -27,7 +27,7 @@ div.anim {
 <div id="target3" class="anim"></div>
 <div id="target4" class="anim"></div>
 
-<script src="../bootstrap.js"></script>
+<script src="../bootstrap.js" nochecks></script>
 <script>
 "use strict";
 
