--- a/test/testcases/test-player.html
+++ b/test/testcases/test-player.html
@@ -19,7 +19,7 @@ Written by Steph McArthur
 <!DOCTYPE html>
 <div id="anim"></div>
 
-<script src="../bootstrap.js"></script>
+<script src="../bootstrap.js" nochecks></script>
 <script>
 
 // Don't use a local named requestAnimationFrame, to avoid potential problems
