--- a/test/testcases/test-repeated-pause.html
+++ b/test/testcases/test-repeated-pause.html
@@ -24,7 +24,7 @@ div.anim {
 
 <div id="anim" class="anim"></div>
 
-<script src="../bootstrap.js"></script>
+<script src="../bootstrap.js" nochecks></script>
 <script>
 "use strict";
 var player = document.timeline.play(new Animation(
