--- a/test/testcases/manual-test-preset-timings.html
+++ b/test/testcases/manual-test-preset-timings.html
@@ -27,7 +27,7 @@ span {
 </style>
 <body>
 
-<script src="../bootstrap.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 "use strict";
 
@@ -57,8 +57,4 @@ testTiming('linear');
 testTiming('ease-in');
 testTiming('ease-out');
 testTiming('ease-in-out');
-
-// FIXME! - Make this actually test something...
-test(function() { assert_true(true); }, "Dummy test");
-
 </script>
